--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,70 +1,57 @@
 version: '3'
 
 volumes:
-  mariadb_data:
+  postgres_data:
     driver: local
     driver_opts:
       type: none
-      device: /home/cycollar/data/mariadb_data
+      device: #TODO
       o: bind
-  wordpress_data:
+  django_data:
     driver: local
     driver_opts:
       type: none
-      device: /home/cycollar/data/wordpress_data
+      device: #TODO
       o: bind
 
 networks:
-  inception:
+  transcendence:
 
 services:
   db:
     image: postgres:latest
-    container_name: my-postgres-container
+    container_name: postgres
     environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: "transcendance"
+      POSTGRES_PASSWORD: "pass"
+      POSTGRES_DB: postgres
     network:
       - transcendence
     volumes:
-      - postgres_data:/var/lib/
+      - postgres_data:./postgres
     restart: unless-stopped
 
   django:
-    build: requirements/wordpress
-    image: wordpress
+    build: #TODO
+    image: django
     networks:
-      - inception
+      - transcendence
     volumes:
-      - wordpress_data:/var/www/wordpress
+      - django_data:./transcendence
     depends_on:
-      - mariadb
-    environment:
-      - WP_URL=${WP_URL}
-      - WP_DATABASE=${WP_DATABASE}
-      - WP_TITLE=${WP_TITLE}
-      - WP_ADMIN_USER=${WP_ADMIN_USER}
-      - WP_ADMIN_PASSWORD=${WP_ADMIN_PASSWORD}
-      - WP_ADMIN_EMAIL=${WP_ADMIN_EMAIL}
-      - WP_USER=${WP_USER}
-      - WP_USER_PASSWORD=${WP_USER_PASSWORD}
-      - WP_USER_EMAIL=${WP_USER_EMAIL}
-      - MARIADB_USER=${MARIADB_USER}
-      - MARIADB_PASSWORD=${MARIADB_PASSWORD}
-      - MARIADB_DB=${MARIADB_DB}
+      - postgres
     restart: unless-stopped
 
-  nginx:
-    build: requirements/nginx
-    image: nginx
-    ports:
-      - "443:443"
-    networks:
-      - inception
-    volumes:
-      - wordpress_data:/var/www/wordpress
-    depends_on:
-      - wordpress
-    restart: unless-stopped
+# nginx:
+#   build: requirements/nginx
+#   image: nginx
+#   ports:
+#     - "443:443"
+#   networks:
+#     - inception
+#   volumes:
+#     - wordpress_data:/var/www/wordpress
+#   depends_on:
+#     - wordpress
+#   restart: unless-stopped
 
