--- a/requirements/Dockerfile_nginx
+++ b/requirements/Dockerfile_nginx
@@ -1,4 +1,33 @@
+# 1. For build React app
+FROM node:alpine AS dev
+
+COPY ./frontend /app
+# Set working directory
+WORKDIR /app
+
+# Same as npm install
+RUN npm ci
+
+ENV CI=true
+ENV PORT=3000
+
+FROM dev AS build
+
+RUN npm run build
+
+# 2. For Nginx setup
 FROM nginx:alpine
 
-COPY ./default.conf /etc/nginx/conf.d/default.conf
-COPY ./frontend-build /etc/nginx/sites-enabled/transcendence.s19.be
+# Copy config nginx
+COPY ./requirements/nginx.conf /etc/nginx/conf.d/default.conf
+
+WORKDIR /usr/share/nginx/html
+
+# Remove default nginx static assets
+RUN rm -rf ./*
+
+# Copy static assets from builder stage
+COPY --from=build /app/build .
+
+# Containers run nginx with global directives and daemon off
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
