node docker close to working i think

--- a/compose.yaml
+++ b/compose.yaml
@@ -29,16 +29,24 @@ services:
       - db
     restart: unless-stopped
 
-  nginx:
+  node:
     build:
       context: .
-      dockerfile: requirements/Dockerfile_nginx
-    container_name: nginx
-    ports:
-      - "80:80"
+      dockerfile: requirements/Dockerfile_node
+    container_name: node
     volumes:
-      - ./frontend:/app
-    depends_on:
-       - django
-    restart: unless-stopped
+      - ./frontend/build:/app/build
+
+  # nginx:
+  #   build:
+  #     context: .
+  #     dockerfile: requirements/Dockerfile_nginx
+  #   container_name: nginx
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./frontend/build:/usr/share/nginx/html
+  #   depends_on:
+  #      - node
+  #   restart: unless-stopped
 
