--- a/requirements/Dockerfile_nginx
+++ b/requirements/Dockerfile_nginx
@@ -1,20 +1,3 @@
-# 1. For build React app
-FROM node:alpine AS dev
-
-COPY ./frontend /app
-# Set working directory
-WORKDIR /app
-
-# Same as npm install
-RUN npm ci
-
-ENV CI=true
-ENV PORT=3000
-
-FROM dev AS build
-
-RUN npm run build
-
 # 2. For Nginx setup
 FROM nginx:alpine
 
@@ -27,7 +10,7 @@ WORKDIR /usr/share/nginx/html
 RUN rm -rf ./*
 
 # Copy static assets from builder stage
-COPY --from=build /app/build .
+COPY ./frontend/build .
 
 # Containers run nginx with global directives and daemon off
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
