--- a/requirements/Dockerfile_django
+++ b/requirements/Dockerfile_django
@@ -5,6 +5,6 @@ WORKDIR /usr/src/app
 COPY requirements/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY backend .
+# COPY backend .
 COPY scripts/django_launch.sh .
 COPY scripts/check_db.py .
