--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -6,7 +6,7 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location /api {
-        proxy_pass https://django:8000;
+        proxy_pass http://django:8000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
