--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -1,21 +1,28 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+	listen       80;
+	listen  [::]:80;
+	server_name  localhost;
 
-    #access_log  /var/log/nginx/host.access.log  main;
+#access_log  /var/log/nginx/host.access.log  main;
 
-    location /api {
-        proxy_pass http://django:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+	location /api {
+		proxy_pass http://django:8000;
+		proxy_http_version 1.1;
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+	}
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
+	location /authenticate {
+		proxy_pass http://django:8000;
+		proxy_http_version 1.1;
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+	}
 
-    }
+	location / {
+		root   /usr/share/nginx/html;
+		index  index.html index.htm;
+		try_files $uri $uri/ /index.html;
+
+	}
 }
