--- a/requirements/Dockerfile_nginx
+++ b/requirements/Dockerfile_nginx
@@ -1,21 +1,21 @@
-# Use an official Node runtime as a parent image
-FROM node:14 as builder
+# # Use an official Node runtime as a parent image
+# FROM node:14 as builder
 
-# Set the working directory to /app
-WORKDIR /app
+# # Set the working directory to /app
+# WORKDIR /app
 
-# Copy package.json and package-lock.json to the working directory
-COPY ./frontend/package.json .
-COPY ./frontend/package-lock.json .
+# # Copy package.json and package-lock.json to the working directory
+# COPY ./frontend/package.json .
+# COPY ./frontend/package-lock.json .
 
-# Install any needed packages specified in package.json
-RUN npm install
+# # Install any needed packages specified in package.json
+# RUN npm install
 
-# Copy all files from the current directory to the working directory
-COPY ./frontend .
+# # Copy all files from the current directory to the working directory
+# COPY ./frontend .
 
-# Build the react app into static assets
-RUN npm run build
+# # Build the react app into static assets
+# RUN npm run build
 
 FROM nginx:alpine
 
@@ -28,7 +28,7 @@ WORKDIR /usr/share/nginx/html
 RUN rm -rf ./*
 
 # Copy static assets from builder stage
-COPY --from=builder /app/build .
+#COPY --from=builder /app/build .
 
 # Containers run nginx with global directives and daemon off
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
