--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -20,9 +20,13 @@ server {
 	}
 
 	location / {
-		root   /usr/share/nginx/html;
-		index  index.html index.htm;
-		try_files $uri $uri/ /index.html;
+		proxy_pass http://node:3000;
+		proxy_http_version 1.1;
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+		# root   /usr/share/nginx/html;
+		# index  index.html index.htm;
+		# try_files $uri $uri/ /index.html;
 
 	}
 }
