--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ db
 .env
 backend/*/__pycache__/*
 backend/__pycache__/*
+frontend/node_modules/*
+backend/api/migrations/*
+backend/game/migrations/*
