--- a/requirements/Dockerfile_node
+++ b/requirements/Dockerfile_node
@@ -5,11 +5,11 @@ FROM node:14 as builder
 WORKDIR /app
 
 # Copy package.json and package-lock.json to the working directory
-COPY ./frontend/package.json .
-COPY ./frontend/package-lock.json .
+# COPY ./frontend/package.json .
+# COPY ./frontend/package-lock.json .
 
 # Install any needed packages specified in package.json
-RUN npm install
+# RUN npm install
 
 # Copy all files from the current directory to the working directory
 COPY ./frontend .
