trying to have a working compose

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,4 @@ db
 .env
 backend/*/__pycache__/*
 backend/__pycache__/*
-backend/api/migrations/*
-backend/game/migrations/*
+backend/*/migrations/*
