--- a/compose.yaml
+++ b/compose.yaml
@@ -19,7 +19,7 @@ services:
     build:
       context: .
       dockerfile: requirements/Dockerfile_django
-    command: sh django_launch.sh
+    command: sh /django_launch.sh
     container_name: django
     ports:
       - '8000:8000'
@@ -30,14 +30,13 @@ services:
     restart: unless-stopped
 
   node:
-    image: node
     build:
       context: .
       dockerfile: requirements/Dockerfile_node
     container_name: node
+    # command: /bin /node_launch.sh
     ports:
       - "3000:3000"
-    command: ["sh", "/node_launch.sh"]
     volumes:
       - ./frontend:/app
     restart: unless-stopped
