--- a/requirements/Dockerfile_django
+++ b/requirements/Dockerfile_django
@@ -5,5 +5,7 @@ WORKDIR /usr/src/app
 COPY requirements/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 # COPY backend .
-COPY scripts/django_launch.sh .
-COPY scripts/check_db.py .
+COPY scripts/django_launch.sh /
+COPY scripts/check_db.py /
+RUN chmod +x /django_launch.sh
+RUN chmod +x /check_db.py
