--- a/requirements/Dockerfile_node
+++ b/requirements/Dockerfile_node
@@ -12,7 +12,6 @@ FROM node:14 as builder
 # Copy all files from the current directory to the working directory
 COPY ../scripts/node_launch.sh /
 RUN chmod +x /node_launch.sh
-WORKDIR /app
-COPY ./frontend .
-ENTRYPOINT ["/bin/sh"]
-CMD ["/node_launch.sh"]
+#WORKDIR /app
+#COPY ./frontend .
+ENTRYPOINT ["/bin/sh", "/node_launch.sh"]
