--- a/requirements/Dockerfile_django
+++ b/requirements/Dockerfile_django
@@ -4,7 +4,10 @@ WORKDIR /usr/src/app
 
 COPY requirements/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install stockfish
 # COPY backend .
 COPY scripts/django_launch.sh .
 COPY scripts/check_db.py .
+RUN chmod +x django_launch.sh
+RUN chmod +x check_db.py
+ENTRYPOINT ["/bin/sh"]
+CMD ["django_launch.sh"]
