--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -19,6 +19,41 @@ server {
 		proxy_cache_bypass $http_upgrade;
 	}
 
+  location /chat {
+    proxy_pass http://django:8000;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+	}
+
+ location /game {
+    proxy_pass http://127.0.0.1:3006;
+	proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+	}
+
+  location /ws {
+        proxy_pass http://django:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_read_timeout 1800;
+        proxy_send_timeout 1800;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+  location /event {
+    proxy_pass http://django:8000;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+	}
+
+
 	location / {
 		proxy_pass http://node:3000;
 		proxy_http_version 1.1;
