--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -27,8 +27,8 @@ server {
 	}
 
  location /game {
-    proxy_pass http://127.0.0.1:3006;
-	proxy_http_version 1.1;
+   	proxy_pass http://django:8000;
+    proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
 	}
