--- a/requirements/Dockerfile_nginx
+++ b/requirements/Dockerfile_nginx
@@ -19,6 +19,15 @@
 
 FROM nginx:alpine
 
+RUN apk add --no-cache openssl
+
+RUN mkdir -p /etc/nginx/certs
+
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/nginx/certs/nginx-selfsigned.key \
+    -out /etc/nginx/certs/nginx-selfsigned.crt \
+    -subj "/C=EN/ST=Brussels/L=Brussels/O=19/OU=Education/CN=localhost"
+
 # Copy config nginx
 COPY ./requirements/nginx.conf /etc/nginx/conf.d/default.conf
 
