--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -1,3 +1,76 @@
+# server {
+#     listen  80;
+#     server_name localhost;
+#     return 301 https://$server_name$request_uri;
+# }
+
+# server {
+#   listen  443 ssl;
+#   listen  [::]:443 ssl;
+#   server_name  localhost;
+
+#   ssl_certificate     /etc/nginx/certs/nginx-selfsigned.crt;
+#   ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
+
+#   location /api {
+#     proxy_pass http://django:8000;
+#     proxy_http_version 1.1;
+#     proxy_set_header Host $host;
+#     proxy_cache_bypass $http_upgrade;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#   }
+
+#   location /authenticate {
+#     proxy_pass http://django:8000;
+#     proxy_http_version 1.1;
+#     proxy_set_header Host $host;
+#     proxy_set_header Authorization $http_authorization;
+#     proxy_pass_header  Authorization;
+#     proxy_cache_bypass $http_upgrade;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#   }
+
+#   location /game {
+#     proxy_pass http://django:8000;
+#     proxy_http_version 1.1;
+#     proxy_set_header Host $host;
+#     proxy_cache_bypass $http_upgrade;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#   }
+
+#   location /ws {
+#     proxy_pass http://django:8000;
+#     proxy_http_version 1.1;
+#     proxy_set_header Host $host;
+#     proxy_read_timeout 1800;
+#     proxy_send_timeout 1800;
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection "Upgrade";
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#   }
+
+#   location / {
+#     proxy_pass http://node:3000;
+#     proxy_http_version 1.1;
+#     proxy_set_header Host $host;
+#     proxy_cache_bypass $http_upgrade;
+#     # proxy_set_header X-Real-IP $remote_addr;
+#     # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     # proxy_set_header X-Forwarded-Proto $scheme;
+#     # root   /usr/share/nginx/html;
+#     # index  index.html index.htm;
+#     # try_files $uri $uri/ /index.html;
+
+#   }
+# }
 server {
 	listen       80;
 	listen  [::]:80;
