--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -107,6 +107,13 @@ server {
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
 	}
+ 
+ location /tournaments {
+   	proxy_pass http://django:8000;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+	}
 
   location /ws {
         proxy_pass http://django:8000;
