--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -115,6 +115,10 @@ server {
     proxy_cache_bypass $http_upgrade;
 	}
 
+  # location /images {
+  #   proxy_pass http://django:8000/static/images;
+  # }
+
   location /ws {
         proxy_pass http://django:8000;
         proxy_http_version 1.1;
