--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -117,6 +117,9 @@ server {
 
   # location /images {
   #   proxy_pass http://django:8000/static/images;
+  #   proxy_http_version 1.1;
+  #   proxy_set_header Host $host;
+  #   proxy_cache_bypass $http_upgrade;
   # }
 
   location /ws {
