--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -85,6 +85,13 @@ server {
 		proxy_cache_bypass $http_upgrade;
 	}
 
+  location /profiles {
+		proxy_pass http://django:8000;
+		proxy_http_version 1.1;
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+	}
+
 	location /authenticate {
 		proxy_pass http://django:8000;
 		proxy_http_version 1.1;
