--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -75,33 +75,15 @@ server {
 	listen       80;
 	listen  [::]:80;
 	server_name  localhost;
+  # rewrite ^ http://localhost:8000$request_uri? permanent;
+
+  # root http://localhost:8000;
 
 #access_log  /var/log/nginx/host.access.log  main;
 
-  location /avatar {
-    proxy_pass http://localhost:8000;
-		proxy_http_version 1.1;
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-  }
-
-  location /picture {
-    proxy_pass http://localhost:8000;
-		proxy_http_version 1.1;
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-  }
-
-  location /background {
-    proxy_pass http://localhost:8000;
-		proxy_http_version 1.1;
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-  }
-
   location /images {
-    proxy_pass http://localhost:8000;
-		proxy_http_version 1.1;
+		proxy_pass http://django:8000/images;
+    proxy_http_version 1.1;
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
   }
