--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ db
 .env
 backend/*/__pycache__/*
 backend/__pycache__/*
-backend/*/migrations/*
+# backend/*/migrations/*
 frontend/node_modules
 frontend/package-lock.json
