--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ db
 backend/*/__pycache__/*
 backend/__pycache__/*
 backend/*/migrations/*
+backend/images/*
 frontend/node_modules
 frontend/package-lock.json
