--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ backend/*/__pycache__/*
 backend/__pycache__/*
 backend/*/migrations/*
 backend/images/*
+backend/secret.txt
 frontend/node_modules
 frontend/package-lock.json
