--- a/compose.yaml
+++ b/compose.yaml
@@ -6,11 +6,11 @@ services:
     image: postgres:14-alpine
     container_name: db
     environment:
-      POSTGRES_USER: transcendence #${POSTGRES_USER}
-      POSTGRES_PASSWORD: pass #${POSTGRES_PASSWORD}
-      POSTGRES_DB: db #${POSTGRES_DB}
-    ports:
-      - '5432:5432'
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    # ports:
+    #   - '5432:5432'
     volumes:
       - ./db:/var/lib/postgresql/data
     restart: unless-stopped
@@ -20,8 +20,8 @@ services:
       context: .
       dockerfile: requirements/Dockerfile_django
     container_name: django
-    ports:
-      - '8000:8000'
+    # ports:
+    #   - '8000:8000'
     volumes:
       - ./backend:/usr/src/app/backend
     depends_on:
@@ -29,21 +29,21 @@ services:
       - redis
     restart: unless-stopped
 
-  node:
-    image: "node:14"
-    user: "node"
-    depends_on:
-      - nginx 
-    working_dir: /home/node/app
-    environment:
-      - NODE_ENV=production
-    volumes:
-      - ./frontend:/home/node/app
-    ports:
-      - "3000:3000"
-    command: "npm start"
-    container_name: node
-    restart: unless-stopped
+# node:
+#   image: "node:14"
+#   user: "node"
+#   depends_on:
+#     - nginx 
+#   working_dir: /home/node/app
+#   environment:
+#     - NODE_ENV=production
+#   volumes:
+#     - ./frontend:/home/node/app
+#   ports:
+#     - "3000:3000"
+#   command: "npm start"
+#   container_name: node
+#   restart: unless-stopped
 
   nginx:
     build:
@@ -51,13 +51,15 @@ services:
       dockerfile: requirements/Dockerfile_nginx
     container_name: nginx
     ports:
-      - "80:80"
-      # - "443:443"
+      # - "80:80"
+      - "443:443"
     restart: unless-stopped
+    volumes:
+      - ./backend/images:/usr/share/nginx/images
 
   redis:
     image: redis:7
     container_name: redis 
-    ports:
-      - "6379:6379"
+    # ports:
+    #   - "6379:6379"
 
