--- a/requirements/nginx.conf
+++ b/requirements/nginx.conf
@@ -72,25 +72,24 @@
 #   }
 # }
 server {
-	listen       80;
-	listen  [::]:80;
-	server_name  localhost;
+  listen  443 ssl;
+  listen  [::]:443 ssl;
+  server_name  localhost;
+
+  ssl_certificate     /etc/nginx/certs/nginx-selfsigned.crt;
+  ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
 
 
 #access_log  /var/log/nginx/host.access.log  main;
 
-  location /images {
-		proxy_pass http://django:8000/images;
-    proxy_http_version 1.1;
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-  }
-
 	location /api {
 		proxy_pass http://django:8000;
 		proxy_http_version 1.1;
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 	}
 
   location /profiles {
@@ -98,6 +97,9 @@ server {
 		proxy_http_version 1.1;
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 	}
 
 	location /authenticate {
@@ -107,6 +109,9 @@ server {
     proxy_set_header Authorization $http_authorization;
     proxy_pass_header  Authorization;
 		proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 	}
 
   location /chat {
@@ -114,6 +119,9 @@ server {
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 	}
 
  location /game {
@@ -121,6 +129,9 @@ server {
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 	}
  
  location /tournaments {
@@ -128,6 +139,9 @@ server {
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 	}
 
   # location /images {
@@ -150,22 +164,23 @@ server {
         # proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-  location /event {
-    proxy_pass http://django:8000;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
-	}
 
+  location / {
+    # proxy_pass http://node:3000;
+    # proxy_http_version 1.1;
+    # proxy_set_header Host $host;
+    # proxy_cache_bypass $http_upgrade;
+    # proxy_set_header X-Real-IP $remote_addr;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # proxy_set_header X-Forwarded-Proto $scheme;
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri $uri/ /index.html;
 
-	location / {
-		proxy_pass http://node:3000;
-		proxy_http_version 1.1;
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-		# root   /usr/share/nginx/html;
-		# index  index.html index.htm;
-		# try_files $uri $uri/ /index.html;
+  }
+  
+  location /images {
+    root   /usr/share/nginx/;
+  }
 
-	}
 }
